@@ -1,0 +1,1 @@
+r-#{each if local_variables.include?(:each)}-#{foo if local_variables.include?(:foo)}
